add file sevice

--- a/catdex/static/index.html
+++ b/catdex/static/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>>Catdex</title>
-  </head>
-  <body>
-    <h1>Catdex</h1>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Catdex</title>
+  <link rel="stylesheet" href="static/css/index.css"
+        type="text/css">
+</head>
+<body>
+  <h1>Catdex</h1>
+  <section class="cats">
+    <article class="cat">
+      <h3>British short hair</h3>
+      <img src="static/image/british-short-hair.jpg" />
+    </article>
+    <article class="cat">
+      <h3>Persian</h3>
+      <img src="static/image/persian.jpg" />
+    </article>
+    <article class="cat">
+      <h3>Ragdoll</h3>
+      <img src="static/image/ragdoll.jpg" />
+    </article>
+  </section>
+</body>
 </html>
