add javascript code

--- a/axum_workspace_example/axum_tower_http_servedir_example/assets/index.html
+++ b/axum_workspace_example/axum_tower_http_servedir_example/assets/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello, World!</title>
+    <title>Axum Static Server</title>
+    <!-- Use a relative path for the script -->
+    <script src="./script.js" defer></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>Welcome to the Axum Static File Server!</h1>
+    <p>Check your browser's console for a message from JavaScript.</p>
   </body>
 </html>
